# frizbee

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  flake.nix  tables.toml
.cargo/: config.toml
.github/workflows/: test.yaml
benches/: generate.rs  interleave.rs  lib.rs  prefilter.rs  smith_waterman.rs  smith_waterman_iai.rs
benches/match_list/: generate.rs  mod.rs
smith_waterman_macro/: Cargo.toml
smith_waterman_macro/src/: lib.rs
src/: bitmask.rs  bucket.rs  const.rs  incremental.rs  lib.rs  match_.rs  prefilter.rs  reference.rs  score_matrix.rs  simd.rs
src/incremental/: bucket.rs  bucket_collection.rs  haystack.rs  interleave.rs  matcher.rs  mod.rs  prefilter.rs
src/one_shot/: bucket.rs  indices.rs  matcher.rs  matcher_parallel.rs  mod.rs  vec.rs
src/one_shot/parallel/: expandable_queue.rs  expandable_vec.rs  fixed_queue.rs  mod.rs  thread_slice.rs  threaded_vec.rs
src/prefilter/: bitmask.rs  memchr.rs  mod.rs  scalar.rs
src/prefilter/simd/: mod.rs
src/prefilter/simd/insensitive/: ordered.rs  unordered.rs  unordered_typos.rs
src/prefilter/simd/sensitive/: ordered.rs  unordered.rs  unordered_typos.rs
src/prefilter/x86_64/: mod.rs
src/prefilter/x86_64/insensitive/: ordered.rs  unordered.rs  unordered_typos.rs
src/prefilter/x86_64/sensitive/: mod.rs  ordered.rs  unordered.rs  unordered_typos.rs
src/smith_waterman/: greedy.rs  mod.rs  reference.rs  simd.rs
src/smith_waterman/reference/: algorithm.rs  indices.rs  mod.rs  typos.rs
src/smith_waterman/simd/: algorithm.rs  indices.rs  interleave.rs  mod.rs  types.rs  typos.rs
src/smith_waterman/simd/interleave/: avx2.rs  avx512.rs  generic.rs  mod.rs
