[package]
name = "frizbee"
description = "Fast fuzzy matching via SIMD smith waterman, similar algorithm to FZF/FZY"
license = "MIT"
version = "0.3.0"
edition = "2021"

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.5"
iai-callgrind = "0.14.0"
nucleo = "0.5.0"
rand = "0.9.0"
rand_distr = "0.5.1"

[[bench]]
name = "lib"
harness = false

[[bench]]
name = "smith_waterman_iai"
harness = false

[dependencies]
memchr = "2.7.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
