[package]
name = "frizbee"
description = "Fast fuzzy matching via SIMD smith waterman, similar algorithm to FZF/FZY"
license = "MIT"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/saghen/frizbee"

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.6"
iai-callgrind = "0.14.0"
nucleo = "0.5.0"
rand = "0.9.1"
rand_distr = "0.5.1"

[[bench]]
name = "lib"
harness = false

# [[bench]]
# name = "smith_waterman_iai"
# harness = false

[dependencies]
memchr = "2.7.4"
multiversion = "0.8.0"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = ["parallel_sort"]
serde = ["dep:serde"]
parallel_sort = ["dep:rayon"]
